--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "GTB Almora",
-  "name": "Goberdhan Tiwari Government Base Hospital, Almora",
+  "name": "Goverdhan Tiwari Government Base Hospital, Almora",
   "icons": [
     {
       "src": "favicon.ico",
