--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-cookies": "^0.1.1",
     "react-dom": "^17.0.2",
     "react-html-table-to-excel": "^2.0.0",
+    "react-paginate": "^7.1.3",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
