--- a/package.json
+++ b/package.json
@@ -3,18 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/lab": "^5.0.0-alpha.98",
+    "@mui/material": "^5.10.4",
+    "@nivo/bar": "^0.79.1",
+    "@nivo/core": "^0.79.0",
+    "@nivo/line": "^0.80.0",
+    "@nivo/pie": "^0.79.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
-    "node-sass": "^5.0.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
+    "react-charts": "^3.0.0-beta.48",
     "react-cookies": "^0.1.1",
     "react-dom": "^17.0.2",
     "react-html-table-to-excel": "^2.0.0",
+    "react-icons": "^4.4.0",
     "react-paginate": "^7.1.3",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
