--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@mui/material": "^5.10.4",
     "@nivo/bar": "^0.79.1",
     "@nivo/core": "^0.79.0",
+    "@nivo/generators": "^0.80.0",
     "@nivo/line": "^0.80.0",
     "@nivo/pie": "^0.79.1",
+    "@nivo/stream": "^0.80.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
