--- a/package.json
+++ b/package.json
@@ -8,16 +8,17 @@
     "@mui/lab": "^5.0.0-alpha.98",
     "@mui/material": "^5.10.4",
     "@nivo/bar": "^0.79.1",
-    "@nivo/core": "^0.79.0",
+    "@nivo/core": "0.72.0",
     "@nivo/generators": "^0.80.0",
-    "@nivo/line": "^0.80.0",
-    "@nivo/pie": "^0.79.1",
+    "@nivo/line": "0.72.0",
+    "@nivo/pie": "0.72.0",
     "@nivo/stream": "^0.80.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "lodash": "^4.17.21",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
@@ -34,6 +35,7 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
+    "virtual-scroll": "^2.2.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
