--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nivo/line": "0.72.0",
     "@nivo/pie": "0.72.0",
     "@nivo/stream": "^0.80.0",
+    "@nivo/tooltip": "^0.80.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
