--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "@emotion/styled": "^11.10.4",
     "@mui/lab": "^5.0.0-alpha.98",
     "@mui/material": "^5.10.4",
+    "@mui/styles": "^5.10.3",
     "@nivo/bar": "^0.79.1",
     "@nivo/core": "0.72.0",
     "@nivo/generators": "^0.80.0",
     "@nivo/line": "0.72.0",
     "@nivo/pie": "0.72.0",
     "@nivo/stream": "^0.80.0",
-    "@nivo/tooltip": "^0.80.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
